// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`EventListSummary correctly identifies transitions 1`] = `
<span
  class="mx_TextualEvent mx_GenericEventListSummary_summary"
>
  <span>
    <button
      class="mx_EventTile_spoiler"
    >
       
      <span
        class="mx_EventTile_spoiler_content"
      >
        user_1
      </span>
    </button>
     
    was invited, was banned, joined, rejected their invitation, left, had their invitation withdrawn, was unbanned, was removed, left and was removed
  </span>
</span>
`;

exports[`EventListSummary correctly orders sequences of transitions by the order of their first event 1`] = `
<span
  class="mx_TextualEvent mx_GenericEventListSummary_summary"
>
  <span>
    user_2
     
    was unbanned and joined and left 2 times
  </span>
  , 
  <span>
    <button
      class="mx_EventTile_spoiler"
    >
       
      <span
        class="mx_EventTile_spoiler_content"
      >
        user_1
      </span>
    </button>
     
    was unbanned, joined and left 2 times and was banned
  </span>
</span>
`;

exports[`EventListSummary handles a summary length = 2, with 1 "other" 1`] = `
<span
  class="mx_TextualEvent mx_GenericEventListSummary_summary"
>
  <span>
    <span>
      user_1
      , 
      user_2
       and one other
    </span>
     
    joined
  </span>
</span>
`;

exports[`EventListSummary handles a summary length = 2, with many "others" 1`] = `
<span
  class="mx_TextualEvent mx_GenericEventListSummary_summary"
>
  <span>
    <span>
      user_0
      , 
      user_1
       and 18 others
    </span>
     
    joined
  </span>
</span>
`;

exports[`EventListSummary handles a summary length = 2, with no "others" 1`] = `
<span
  class="mx_TextualEvent mx_GenericEventListSummary_summary"
>
  <span>
    user_1
     and 
    user_2
     
    joined 2 times
  </span>
</span>
`;

exports[`EventListSummary handles invitation plurals correctly when there are multiple invites 1`] = `
<span
  class="mx_TextualEvent mx_GenericEventListSummary_summary"
>
  <span>
    user_1
     
    rejected their invitation 2 times
  </span>
</span>
`;

exports[`EventListSummary handles invitation plurals correctly when there are multiple users 1`] = `
<span
  class="mx_TextualEvent mx_GenericEventListSummary_summary"
>
  <span>
    <span>
      user_1
       and one other
    </span>
     
    rejected their invitations and had their invitations withdrawn
  </span>
</span>
`;

exports[`EventListSummary handles many users following the same sequence of memberships 1`] = `
<span
  class="mx_TextualEvent mx_GenericEventListSummary_summary"
>
  <span>
    <span>
      <button
        class="mx_EventTile_spoiler"
      >
         
        <span
          class="mx_EventTile_spoiler_content"
        >
          user_0
        </span>
      </button>
       and 19 others
    </span>
     
    were unbanned, joined and left 2 times and were banned
  </span>
</span>
`;

exports[`EventListSummary handles multiple users following the same sequence of memberships 1`] = `
<span
  class="mx_TextualEvent mx_GenericEventListSummary_summary"
>
  <span>
    <span>
      <button
        class="mx_EventTile_spoiler"
      >
         
        <span
          class="mx_EventTile_spoiler_content"
        >
          user_1
        </span>
      </button>
       and one other
    </span>
     
    were unbanned, joined and left 2 times and were banned
  </span>
</span>
`;

exports[`EventListSummary renders collapsed events if events.length = props.threshold 1`] = `
<span
  class="mx_TextualEvent mx_GenericEventListSummary_summary"
>
  <span>
    user_1
     
    joined and left and joined
  </span>
</span>
`;

exports[`EventListSummary renders expanded events if there are less than props.threshold 1`] = `
HTMLCollection [
  <div
    class="event_tile"
  >
    Expanded membership
  </div>,
]
`;

exports[`EventListSummary renders expanded events if there are less than props.threshold for join and leave 1`] = `
HTMLCollection [
  <div
    class="event_tile"
  >
    Expanded membership
  </div>,
  <div
    class="event_tile"
  >
    Expanded membership
  </div>,
]
`;

exports[`EventListSummary should not blindly group 3pid invites and treat them as distinct users instead 1`] = `
<span
  class="mx_TextualEvent mx_GenericEventListSummary_summary"
>
  <span>
    n...@d...
     
    was invited 2 times
  </span>
  , 
  <span>
    d...@w...
     
    was invited
  </span>
</span>
`;

exports[`EventListSummary truncates long join,leave repetitions 1`] = `
<span
  class="mx_TextualEvent mx_GenericEventListSummary_summary"
>
  <span>
    user_1
     
    joined and left 7 times
  </span>
</span>
`;

exports[`EventListSummary truncates long join,leave repetitions between other events 1`] = `
<span
  class="mx_TextualEvent mx_GenericEventListSummary_summary"
>
  <span>
    user_1
     
    was unbanned, joined and left 7 times and was invited
  </span>
</span>
`;

exports[`EventListSummary truncates multiple sequences of repetitions with other events between 1`] = `
<span
  class="mx_TextualEvent mx_GenericEventListSummary_summary"
>
  <span>
    <button
      class="mx_EventTile_spoiler"
    >
       
      <span
        class="mx_EventTile_spoiler_content"
      >
        user_1
      </span>
    </button>
     
    was unbanned, joined and left 2 times, was banned, joined and left 3 times and was invited
  </span>
</span>
`;
